--- a/docassemble/Pruvodci/data/questions/poplatekOdpad_vystupy.yml
+++ b/docassemble/Pruvodci/data/questions/poplatekOdpad_vystupy.yml
@@ -157,16 +157,14 @@ content: |
 
     *  [${ Obec.pobyt.vyhlaska["Název"] }](https://sbirkapp.gov.cz/detail/${ Obec.pobyt.vyhlaska["ID záznamu"] }/text).
 
+  <div class="alert alert-dismissible alert-light"><button type="button" class="btn-close" data-bs-dismiss="alert"></button>Pro jistotu doporučujeme vyhlášku překontrolovat.</div>
   % endif
   % if Obec.bydliste.vyhlaska != "Není":
   Vyhláška obce ${ Obec.bydliste.obec }, která upravuje poplatek za odpad:
 
     *  [${ Obec.bydliste.vyhlaska["Název"] }](https://sbirkapp.gov.cz/detail/${ Obec.bydliste.vyhlaska["ID záznamu"] }/text).
 
-  <div class="alert alert-dismissible alert-light">
-  <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
-  Pro jistotu doporučujeme vyhlášku překontrolovat.
-  </div>
+  <div class="alert alert-dismissible alert-light"><button type="button" class="btn-close" data-bs-dismiss="alert"></button>Pro jistotu doporučujeme vyhlášku překontrolovat.</div>
   % endif
 ---
 template: upozorneteObec
