--- a/docassemble/Pruvodci/data/questions/poplatekOdpad_vystupy.yml
+++ b/docassemble/Pruvodci/data/questions/poplatekOdpad_vystupy.yml
@@ -235,7 +235,7 @@ subquestion: |
 ---
 event: system_znemovitosti
 question: |
-  Poplatek musíte platit v obci ${ Obec.bydliste.obec } V obci ${ Obec.pobyt.obec } jste od poplatku osvobozeni. Musíte to ale obci oznámit.
+  Poplatek musíte platit v obci ${ Obec.bydliste.obec }. V obci ${ Obec.pobyt.obec } jste od poplatku osvobozeni. Musíte to ale obci oznámit.
 subquestion: |
   Poplatek jste povinni platit v obci, kde máte bydliště a kde odpad produkujete. V obci, kde máte trvalý pobyt, ale nebydlíte tam, jste ze zákona od poplatku osvobozeni. Osvobození musíte obci oznámit ve stanovené lhůtě. Obvykle lhůta končí splatností poplatku. Podrobnosti se dozvíte z obecně závazné vyhlášky ${ Obec.pobyt.obec }:
 
