--- a/docassemble/Pruvodci/data/questions/poplatekOdpad.yml
+++ b/docassemble/Pruvodci/data/questions/poplatekOdpad.yml
@@ -87,6 +87,8 @@ subquestion: |
 fields:
   - Obec: Obec.pobyt.obec
   - Kraj: Obec.pobyt.kraj
+    code: |
+      ['Hlavní město Praha', 'Zlínský kraj', 'Liberecký kraj', 'Moravskoslezský kraj', 'Jihočeský kraj', 'Středočeský kraj', 'Jihomoravský kraj', 'Plzeňský kraj', 'Olomoucký kraj', 'Kraja Vysočina', 'Ústecký kraj', 'Karlovarský kraj', 'Pardubický kraj', 'Královéhradecký kraj']
 script: |
   <script>var typ = "pobyt";</script>
   <script src="${ url_of('mapy_api_obec.js')}"></script>
@@ -157,6 +159,8 @@ question: |
 fields:
   - Obec: Obec.bydliste.obec
   - Kraj: Obec.bydliste.kraj
+    code: |
+      ['Hlavní město Praha', 'Zlínský kraj', 'Liberecký kraj', 'Moravskoslezský kraj', 'Jihočeský kraj', 'Středočeský kraj', 'Jihomoravský kraj', 'Plzeňský kraj', 'Olomoucký kraj', 'Kraja Vysočina', 'Ústecký kraj', 'Karlovarský kraj', 'Pardubický kraj', 'Královéhradecký kraj']
 script: |
   <script>var typ = "bydliste"</script>
   <script src="${ url_of('mapy_api_obec.js') }"></script>
